--- a/3dRing.html
+++ b/3dRing.html
@@ -170,7 +170,7 @@
 
                         var num = Number(input.value) || 0;
                         var nextState = num = (0 - getDefaultRotation(num));    
-                        num += (5 * 360);                       
+                        num -= (5 * 360);                       
 
                         cssStr.push('@-webkit-keyframes ringAnimation' + i + '' + timeRun + ' { 0% { -webkit-transform: rotateX(' + currentState[i] + 'deg); } 100% { -webkit-transform: rotateX(' + num + 'deg); }}');
 
